--- a/apps/music-converter/src/index.css
+++ b/apps/music-converter/src/index.css
@@ -1,7 +1,24 @@
 @import "tailwindcss";
 
+:root {
+  --viewport-height: 100vh;
+}
+
+@utility min-h-viewport {
+  min-height: var(--viewport-height);
+}
+
 * {
   scrollbar-color: rgba(255, 255, 255, 0.08) transparent;
+
+  -webkit-user-drag: none;
+  -webkit-tap-highlight-color: transparent;
+
+  /* for safari */
+  --safe-area-top: env(safe-area-inset-top);
+  --safe-area-left: env(safe-area-inset-left);
+  --safe-area-right: env(safe-area-inset-right);
+  --safe-area-bottom: env(safe-area-inset-bottom);
 }
 
 body {
