--- a/apps/music-converter/src/index.css
+++ b/apps/music-converter/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@reference "utils/tailwind"
 
 :root {
   --viewport-height: 100vh;
@@ -22,6 +23,7 @@
 }
 
 body {
+  @apply app-region-drag;
   @apply select-none;
   @apply text-sm;
 
@@ -29,4 +31,6 @@ body {
   font-variant-numeric: tabular-nums;
 
   @apply bg-[#141416] text-[#ffffffea];
+  @apply mica:bg-transparent;
+  @apply vibrancy:bg-[#141416]/60;
 }
