--- a/apps/view/src/index.css
+++ b/apps/view/src/index.css
@@ -1,15 +1,21 @@
 @import "tailwindcss";
+@reference "utils/tailwind"
 
 * {
   scrollbar-color: rgba(255, 255, 255, 0.08) transparent;
 }
 
 body {
+  @apply app-region-drag;
   @apply select-none;
   @apply text-sm;
 
   font-family: -apple-system, Helvetica, Arial, Tahoma, PingFangSC, sans-serif, "Segoe UI Emoji", "Noto Emoji";
   font-variant-numeric: tabular-nums;
 
+  /*@apply bg-[#f8f8f8] text-[#121212ea];*/
+  /*@apply dark:bg-[#141416] dark:text-[#ffffffea];*/
   @apply bg-[#141416] text-[#ffffffea];
+  @apply mica:bg-transparent;
+  @apply vibrancy:bg-[#141416]/60;
 }
