--- a/libs/utils/tailwind/index.css
+++ b/libs/utils/tailwind/index.css
@@ -9,3 +9,25 @@
     -webkit-app-region: drag;
   }
 }
+
+/* safe area */
+:root {
+  /* for safari */
+  --safe-area-top: max(env(safe-area-inset-top), 16px);
+  --safe-area-bottom: max(env(safe-area-inset-bottom), 16px);
+  --safe-area-left: max(env(safe-area-inset-left), 16px);
+  --safe-area-right: max(env(safe-area-inset-right), 16px);
+}
+
+@utility pt-safe-area {
+  padding-top: var(--safe-area-top);
+}
+@utility pb-safe-area {
+  padding-top: var(--safe-area-bottom);
+}
+@utility pl-safe-area {
+  padding-left: var(--safe-area-left);
+}
+@utility pr-safe-area {
+  padding-right: var(--safe-area-right);
+}
