--- a/libs/utils/tailwind/index.css
+++ b/libs/utils/tailwind/index.css
@@ -11,23 +11,25 @@
 }
 
 /* safe area */
-:root {
-  /* for safari */
-  --safe-area-top: max(env(safe-area-inset-top), 16px);
-  --safe-area-bottom: max(env(safe-area-inset-bottom), 16px);
-  --safe-area-left: max(env(safe-area-inset-left), 16px);
-  --safe-area-right: max(env(safe-area-inset-right), 16px);
+@layer base {
+  * {
+    /* for safari */
+    --safe-area-top: env(safe-area-inset-top);
+    --safe-area-bottom: env(safe-area-inset-bottom);
+    --safe-area-left: env(safe-area-inset-left);
+    --safe-area-right: env(safe-area-inset-right);
+  }
 }
 
 @utility pt-safe-area {
-  padding-top: var(--safe-area-top);
+  padding-top: max(var(--safe-area-top, 0px), 16px);
 }
 @utility pb-safe-area {
-  padding-top: var(--safe-area-bottom);
+  padding-bottom: max(var(--safe-area-bottom, 0px), 16px);
 }
 @utility pl-safe-area {
-  padding-left: var(--safe-area-left);
+  padding-left: max(var(--safe-area-left, 0px), 16px);
 }
 @utility pr-safe-area {
-  padding-right: var(--safe-area-right);
+  padding-right: max(var(--safe-area-right, 0px), 16px);
 }
